keyboard: Always add the "Custom shortcuts" section

Even if it is empty by default.

https://bugzilla.gnome.org/show_bug.cgi?id=648091